--- a/frontend/customer/main/mybookings.html
+++ b/frontend/customer/main/mybookings.html
@@ -16,7 +16,6 @@
       color: #333;
       text-decoration: none;
     }
-
     .bookings-table-container {
       max-width: 900px;
       margin: 0 auto;
@@ -49,7 +48,6 @@
       color: white;
     }
     .bookings-table button:hover { background: #2980b9; }
-
     .modal {
       display: none;
       position: fixed;
@@ -86,6 +84,7 @@
       margin-top: 15px;
     }
     .cancel-btn:hover { background: #c0392b; }
+    .review-btn { background-color: #f1c40f; color: white; }
   </style>
 </head>
 <body>
@@ -100,7 +99,7 @@
           <th>Type</th>
           <th>Date</th>
           <th>Status</th>
-          <th>Details</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -109,7 +108,6 @@
     </table>
   </div>
 
-  <!-- Modal -->
   <div id="bookingDetailsModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
@@ -124,7 +122,7 @@
     const span = document.getElementsByClassName("close")[0];
 
     span.onclick = () => modal.style.display = "none";
-    window.onclick = event => { if (event.target == modal) modal.style.display = "none"; };
+    window.onclick = event => { if (event.target === modal) modal.style.display = "none"; };
 
     function showDetails(booking) {
       modalBody.innerHTML = `
@@ -137,7 +135,7 @@
       `;
 
       if (booking.status === "Pending") {
-        const cancelButton = document.createElement('button');
+        const cancelButton = document.createElement("button");
         cancelButton.textContent = "Cancel Booking";
         cancelButton.className = "cancel-btn";
         cancelButton.onclick = () => cancelBooking(booking._id);
@@ -152,8 +150,16 @@
       const tableBody = document.querySelector("#bookingTable tbody");
 
       try {
-        const res = await fetch(`/api/customer/${customerId}/bookings`);
-        const bookings = await res.json();
+        // Fetch bookings
+        const bookingsRes = await fetch(`http://localhost:5000/api/customer/${customerId}/bookings`);
+        if (!bookingsRes.ok) throw new Error("Failed to fetch bookings");
+        const bookings = await bookingsRes.json();
+
+        // Fetch reviews
+        const reviewsRes = await fetch(`http://localhost:5000/api/customer/${customerId}/reviews`);
+        if (!reviewsRes.ok) throw new Error("Failed to fetch reviews");
+        const reviews = await reviewsRes.json();
+        const reviewedBookingIds = Array.isArray(reviews) ? reviews.map(r => r.bookingId) : [];
 
         tableBody.innerHTML = "";
         if (!bookings.length) {
@@ -167,11 +173,20 @@
           row.insertCell(1).innerText = new Date(b.date).toLocaleDateString();
           row.insertCell(2).innerText = b.status;
 
-          const detailsCell = row.insertCell(3);
-          const detailsButton = document.createElement('button');
-          detailsButton.innerText = "Click for Details";
+          const actionsCell = row.insertCell(3);
+          const detailsButton = document.createElement("button");
+          detailsButton.innerText = "Details";
           detailsButton.onclick = () => showDetails(b);
-          detailsCell.appendChild(detailsButton);
+          actionsCell.appendChild(detailsButton);
+
+          if (b.status === "Completed" && !reviewedBookingIds.includes(b._id)) {
+            const reviewButton = document.createElement("button");
+            reviewButton.innerText = "Give Review";
+            reviewButton.className = "review-btn";
+            reviewButton.style.marginLeft = "10px";
+            reviewButton.onclick = () => window.location.href = `review.html?bookingId=${b._id}`;
+            actionsCell.appendChild(reviewButton);
+          }
         });
       } catch (error) {
         tableBody.innerHTML = '<tr><td colspan="4" style="text-align: center; color: red;">Failed to load bookings.</td></tr>';
@@ -181,10 +196,16 @@
 
     async function cancelBooking(id) {
       if (confirm("Are you sure you want to cancel this booking?")) {
-        await fetch(`/api/customer/booking/${id}/cancel`, { method: "PUT" });
-        alert("Booking cancelled!");
-        loadBookings(); // ✅ reload table without refreshing page
-        modal.style.display = "none";
+        try {
+          const res = await fetch(`http://localhost:5000/api/customer/booking/${id}/cancel`, { method: "PUT" });
+          if (!res.ok) throw new Error("Failed to cancel booking");
+          alert("Booking cancelled!");
+          loadBookings();
+          modal.style.display = "none";
+        } catch (error) {
+          alert("Error cancelling booking.");
+          console.error("Cancel booking error:", error);
+        }
       }
     }
 
